--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "framer-motion": "^11.3.30",
     "next": "14.2.6",
     "react": "^18",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18",
+    "react-responsive-carousel": "^3.2.23",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
