--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.3.30",
+    "lucide-react": "^0.465.0",
     "next": "14.2.6",
     "react": "^18",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
     "swiper": "^11.1.14",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
