--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
@@ -33,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
